--- a/index.html
+++ b/index.html
@@ -30,7 +30,23 @@
             <h2>Welcome To Missing People Platform</h2>
             <p>Helping Families Find Their Loved Ones</p>
                 </section>
-                
+                <p>
+                <section class="register">
+                    <h3>Create an account</h3>
+                <form id="reqister form" action="register.html" method="post">
+                    <label for="username" >User name :</label>
+    <input type="text" id="username" name="username" placeholder="Enter user name" required>
+
+     <label for="email" >Email :</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+    <label for="password" class="i">Password :</label>
+    <input type="password" id="password" name="password" placeholder="Enter password" required>
+    <label for="confirm_password">Confirm Password</label>
+    <input type="password" id="confirm_password" name="confirm_password" required placeholder="Confirm_password">
+          <button type="submit" onclick="window.location.href='register.html'">Create Account</button>   
+          </form>  
+</p>
     <button id="reportButton" > Report a Missing Person</button>
      <script  defer>
     document.addEventListener("DOMContentLoaded",function(){
@@ -46,7 +62,15 @@ window.location.href="report.html";
     }
     );
 
-
+let registerForm = document.getElementById("registerForm");
+registerForm.addEventListener("submit",function(event){
+    let password = document.getElementById("password").value;
+    let confirmPassword = document.getElementById("confirm_password").value;
+    if (password !==confirmPassword){
+        event.preventDefault();
+        alert("Passwords do not match.Pleasetry again.");
+    }
+});
      </script>  
 </body>
 </html>
